--- a/index.html
+++ b/index.html
@@ -1,89 +1,55 @@
-﻿<!DOCYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>ハイパーリンクの練習</title>
-<link rel="stylesheet" href="mystyle.css">
-</link>
+<link rel="stylesheet" type="text/css" href="css/19-20pog.css">
+<link rel="shortcut icon" href="image/pog_favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="image/pog_favicon.png" type="image/png">
+<link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+<title>バンダナ19-20シーズンPOG</title>
 </head>
 <body>
-<p>アンカータグの練習です。</p>
-<a id="def">ここがdefの場所</a>
-<a href="a.html">相対パスでリンクします</a><br>
-<a
-href="https://www.josai.ac.jp/education/management/index.html">絶対パスで城西大学経営学部へリンクします。</a><br>
-<a href="mailto:info@yahoo.co.jp">メール（実際には動きません）</a>
-<br>
-<a href="https://www.josai.ac.jp/"><img src="./josai.png" alt="城西大学ホームページ"></a>
-<br>
-<a href="a.html" target="_blank">別画面を開いてリンクします</a><br>
-<a href="a.html" target="_self">リンク元と同じフレームにリンクします</a><br>
-<a href="a.html" target="_parent">ひとつ上のフレームにリンクします</a><br>
-<a href="a.html" target="_top">フレームをすべて解除してリンクします</a><br>
-<a href="a.html" target="abc"></a>abcという名前のフレームにリンクします<br>
-<!--文字の大きさの練習-->
-<h1>Hello world</h1>
-<h2>Hello world</h2>
-<h3>Hello world</h3>
-<ol>
-<li>ぼけぼけ</li>
-<li>ほにゃらら</li>
-</ol>
-<a id="abc">ここがabcの場所</a>
-<dl>
-<dt>作者</dt>
-<dd>ジョン</dd>
-<dd>ポール</dd>
-<dd>ジョージ</dd>
-<dd>リンゴ</dd>
-</dl>
-<dl>
-<dt lang="ja"><dfn></dfn></dt>
-<dt lang="ja"><dfn></dfn></dt>
-<dt lang="en-US"><dfn>color</dfn></dt>
-<dt lang="en-GB"><dfn>colour</dfn></dt>
-<dd>可視光線の波長の長短によって人が視覚で感じ分けられる色覚・色刺激のこと。</dd>
-</dl>
-<p>
-ゲームの得点は以下の順序で計算されます。
-</p>
-<dl>
+<div id="pageWrapper">
+	<div id="header">
+	</div>
 
-<dt>金貨を獲得している場合</dt>
-<dd>金貨一枚につき10ポイント加算されます。</dd>
-<dt>銀貨を獲得している場合</dt>
-<dd>銀貨一枚につき1ポイント加算されます。</dd>
-<dt>枚数に関わらず、金貨と銀貨の両方を獲得している場合</dt>
-<dd>ボーナスポイントとして20ポイント加算されます。</dd>
-<dt>それ以外の場合</dt>
-<dd>ポイントは加算されません。</dd>
-</dl>
-<a id="abc">ファイルの途中にabcという名前を付けます</a><br>
-<a id="#abc">abcと名前を付けた場所へリンクします</a><br>
-<a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
-<aside class="ad">
-<h1>広報</h1>
-<a href="https://www.josai.ac.jp/club/jyosisofuto.html">
-<section>
-<h1>城西大学　女子ソフトボール部</h1>
-<p>第26回関東学生ソフトボール選手権大会にて</p>
-<p>インカレ出場権獲得</p>
-</section></a>
-<a href="https://www.josai.ac.jp/news/20180523-02.html">
-<section>
-<h1>城西大学「陸上競技部」「男子駅伝部」「女子駅伝部」</h1>
-<p>第97回関東学生陸上競技対校選手権大会</p>
-<p>出場選手の壮行会を開催</p>
-</section>
-</a>
-</aside>
-<nav>
-<ul>
-<li><a href="https://www.josai.ac.jp/club/jyosisofuto.html">女子ソフトボール部</a></li>
-<li><a href="https://www.josai.ac.jp/club/ekiden_hakone.html">男子駅伝部</a></li>
-<li><a href="https://www.josai.ac.jp/club/ekiden_joshiekiden.html">女子駅伝部</a></li>
-<li><a>クラブ・サークル活動</a></li>
-</ul>
-</nav>
-</body>
-</html>
+	<div id="contentsWrapper">
+		<div id="mainContents">
+			<div id="about" class="contents">
+			<h2><img src="image/home.jpeg" width="111" height="44" alt="Contents" /></h2>
+			
+			
+						
+			<p class="note"><br />
+			<p>仲間内でのゲームの窓口となるサイトです。</p>
+			<p>各ページの内容を記載しておりますので、左のリストよりご覧になりたいページへアクセスしてください。</p>
+			<p>また、稼働中のページは<a href="http://cerisier325.html.xdomain.jp/kadai/">こちら</a>からご覧いただけますので、よろしければご覧ください。</p>
+			<br />
+
+			<br />
+			　
+			<br />
+			<br />
+			</p>
+			<pre>
+
+			</div>
+		</div>
+
+		<div id="nav"><h3><img src="image/menu.jpeg" width="180" height="40"/></h3>
+		<ul>
+		<li><a href="http://cerisier325.html.xdomain.jp/kadai/"><img src="image/home.jpeg" width="180" height="30" alt="Home"/></a></li>
+		<li><a href="http://cerisier325.html.xdomain.jp/kadai/rule/"><img src="image/ru-ru.jpeg" width="180" height="30" alt="ルール"/></a></li>
+		<li><a href="http://cerisier325.html.xdomain.jp/kadai/bonus/"><img src="image/bonus.jpeg" width="180" height="30" alt="ボーナス"/></a>
+		<li><a href="http://cerisier325.php.xdomain.jp/kadai/bbs/"><img src="image/keijiban.jpeg" width="180" height="30" alt="掲示板"/></a></li>
+		<li><a href="http://cerisier325.html.xdomain.jp/kadai/mare/"><img src="image/mare.jpeg" width="180" height="30" alt="指名済み母馬"/></a></li>
+		<li><a href="http://cerisier325.html.xdomain.jp/kadai/result/"><img src="image/result_2.jpeg" width="180" height="30" alt="２回目結果"/></a></li>
+		</ul>
+		</div>
+
+	</div>
+	
+	<div id="footer"><p>Copyright &copy;2019 CerisierManagement. All rights reserved.</p>
+	</div>
+</div>
+</body></html>
