--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 		<div id="nav"><h3><img src="image/menu.jpeg" width="180" height="40"/></h3>
 		<ul>
 		<li><a href="http://cerisier325.html.xdomain.jp/kadai/"><img src="image/home.jpeg" width="180" height="30" alt="Home"/></a></li>
-		<li><a href="http://cerisier325.html.xdomain.jp/kadai/rule/"><img src="image/ru-ru.jpeg" width="180" height="30" alt="ルール"/></a></li>
-		<li><a href="http://cerisier325.html.xdomain.jp/kadai/bonus/"><img src="image/bonus.jpeg" width="180" height="30" alt="ボーナス"/></a>
+		<li><a href="rule.html"><img src="image/ru-ru.jpeg" width="180" height="30" alt="ルール"/></a></li>
+		<li><a href="bonus.htnl"><img src="image/bonus.jpeg" width="180" height="30" alt="ボーナス"/></a>
 		<li><a href="http://cerisier325.php.xdomain.jp/kadai/bbs/"><img src="image/keijiban.jpeg" width="180" height="30" alt="掲示板"/></a></li>
 		<li><a href="http://cerisier325.html.xdomain.jp/kadai/mare/"><img src="image/mare.jpeg" width="180" height="30" alt="指名済み母馬"/></a></li>
 		<li><a href="http://cerisier325.html.xdomain.jp/kadai/result/"><img src="image/result_2.jpeg" width="180" height="30" alt="２回目結果"/></a></li>
